--- a/CircuitsDashboard/Views/Quotes/Index.cshtml
+++ b/CircuitsDashboard/Views/Quotes/Index.cshtml
@@ -1,4 +1,8 @@
-﻿<div class="page-header">
+﻿@{
+    ViewBag.Controller = "Home";
+    ViewBag.Action = "Dashboard";
+}
+<div class="page-header">
     <div class="page-header-content header-elements-md-inline">
         <div class="page-title d-flex">
             <h4><span class="font-weight-semibold">Limitless</span> - Form Plugins</h4>
