--- a/CircuitsDashboard/Views/Quotes/Index.cshtml
+++ b/CircuitsDashboard/Views/Quotes/Index.cshtml
@@ -1,6 +1,6 @@
 ﻿@{
-    ViewBag.Controller = "Home";
-    ViewBag.Action = "Dashboard";
+    ViewBag.Controller = "Quotes";
+    ViewBag.Action = "Received";
 }
 <div class="page-header">
     <div class="page-header-content header-elements-md-inline">
