Last changes to add the Lonas Unwriting Details

--- a/CircuitsDashboard/Views/Quotes/Requested.cshtml
+++ b/CircuitsDashboard/Views/Quotes/Requested.cshtml
@@ -14,8 +14,8 @@
             </div>
             <div class="col-lg-3">
                 <div class="card">
-                    <div class="card-header" style="text-align:center; background-color:#26A69A; color:white">
-                        <h4>Open Quotes</h4>
+                    <div class="card-header" style="padding:10px; text-align:center; background-color:#26A69A; color:white">
+                        <h5>Open Quotes</h5>
                     </div>
                     <div class="card-body" style="padding-top:15px">
                         <div style="text-align:center">
@@ -29,8 +29,8 @@
             </div>
             <div class="col-lg-3">
                 <div class="card">
-                    <div class="card-header" style="text-align:center; background-color:#26A69A; color:white">
-                        <h4>Current Open Tasks</h4>
+                    <div class="card-header" style="padding:10px; text-align:center; background-color:#26A69A; color:white">
+                        <h5>Current Open Tasks</h5>
                     </div>
                     <div class="card-body" style="padding-top:15px">
                         <div style="text-align:center">
@@ -49,8 +49,8 @@
             </div>
             <div class="col-lg-3">
                 <div class="card">
-                    <div class="card-header" style="text-align:center; background-color:red; color:white">
-                        <h4>Alerts</h4>
+                    <div class="card-header" style="padding:10px; text-align:center; background-color:red; color:white">
+                        <h5>Alerts</h5>
                     </div>
                     <div class="card-body" style="padding-top:15px">
                         <div style="text-align:center">
@@ -64,8 +64,8 @@
             </div>
             <div class="col-lg-3">
                 <div class="card">
-                    <div class="card-header" style="text-align:center; background-color:grey; color:white">
-                        <h4>??</h4>
+                    <div class="card-header" style="padding:10px; text-align:center; background-color:grey; color:white">
+                        <h5>??</h5>
                     </div>
                     <div class="card-body" style="padding-top:15px">
                         <div style="text-align:center">
